@@ -4,8 +4,8 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>ApiWorker</groupId>
-  <artifactId>ApiWorker</artifactId>
+  <groupId>SemaphoreAPIExecutor</groupId>
+  <artifactId>SemaphoreAPIExecutor</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
 
@@ -13,14 +13,16 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <my.mainClass>SemaphoreAPIExecutor.HttpsClient</my.mainClass>
+    <my.version>0.1.0.0</my.version>
+    <my.productname>Semaphorexec</my.productname>
   </properties>
 
   <dependencyManagement>
     <dependencies>
       <!-- Camel BOM -->
       <dependency>
-        <groupId>org.apache.camel</groupId>
+        <groupId>org.apache.cam2el</groupId>
         <artifactId>camel-parent</artifactId>
         <version>2.20.1</version>
         <scope>import</scope>
@@ -43,7 +45,6 @@
       <version>1.2</version>
     </dependency>
 
-
     <!-- testing -->
     <dependency>
       <groupId>org.apache.camel</groupId>
@@ -54,7 +55,6 @@
 
   <build>
     <defaultGoal>install</defaultGoal>
-
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -76,60 +76,6 @@
 
       <!-- Allows the example to be run via 'mvn compile exec:java' -->
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>1.6.0</version>
-        <configuration>
-          <mainClass>SemaphoreAPIExecutor.MainApp</mainClass>
-          <includePluginDependencies>false</includePluginDependencies>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>com.akathist.maven.plugins.launch4j</groupId>
-        <artifactId>launch4j-maven-plugin</artifactId>
-        <version>1.5.2</version>
-        <executions>
-          <execution>
-            <id>l4j-gui</id>
-            <phase>package</phase>
-            <goals>
-              <goal>launch4j</goal>
-            </goals>
-            <configuration>
-              <headerType>gui</headerType>
-              <outfile>target/Project.exe</outfile>
-              <jar>target/ApiWorker-1.0-SNAPSHOT.jar</jar>
-              <!-- if <dontWrapJar>true</dontWrapJar> change to this conf <jar>${project.artifactId}-${project.version}.jar</jar> -->
-              <dontWrapJar>false</dontWrapJar>
-              <errTitle>Error in launch4j plugin</errTitle>
-              <classPath>
-                <mainClass>SemaphoreAPIExecutor.HttpsClient</mainClass>
-              </classPath>
-              <!--<icon>Project.ico</icon>-->
-              <jre>
-                <minVersion>1.7.0</minVersion>
-                <maxVersion>1.9.0</maxVersion>
-                <initialHeapSize>512</initialHeapSize>
-                <maxHeapSize>1024</maxHeapSize>
-                <jdkPreference>preferJre</jdkPreference>
-              </jre>
-              <versionInfo>
-                <fileVersion>1.0.0.0</fileVersion>
-                <txtFileVersion>1.0.0.0</txtFileVersion>
-                <fileDescription>des</fileDescription>
-                <copyright>Copyright (c) 2014 </copyright>
-                <companyName>comp</companyName>
-                <productVersion>3.0.0.0</productVersion>
-                <txtProductVersion>${project.version}</txtProductVersion>
-                <productName>Project</productName>
-                <internalName>Project</internalName>
-                <originalFilename>Project.exe</originalFilename>
-              </versionInfo>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <version>3.0.2</version>
@@ -139,6 +85,82 @@
           </archive>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>com.akathist.maven.plugins.launch4j</groupId>
+        <artifactId>launch4j-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>l4j-clui</id>
+            <phase>package</phase>
+            <goals><goal>launch4j</goal></goals>
+            <configuration>
+              <headerType>console</headerType>
+              <outfile>target/${my.productname}.exe</outfile>
+              <jar>target/${my.productname}.jar</jar>
+              <errTitle>encc</errTitle>
+              <classPath>
+                <mainClass>${my.mainClass}</mainClass>
+                <addDependencies>false</addDependencies>
+                <preCp>anything</preCp>
+              </classPath>
+              <jre>
+                <minVersion>1.5.0</minVersion>
+                <opts>
+                  <opt>-Djava.endorsed.dirs=./endorsed</opt>
+                </opts>
+              </jre>
+              <versionInfo>
+                <fileVersion>${my.version}</fileVersion>
+                <txtFileVersion>txt file version?</txtFileVersion>
+                <fileDescription>Simple Semaphore API tasks executor</fileDescription>
+                <copyright>my copyright</copyright>
+                <productVersion>${my.version}</productVersion>
+                <txtProductVersion>txt product version</txtProductVersion>
+                <productName>${my.productname}</productName>
+                <internalName>${my.productname}</internalName>
+                <originalFilename>original.exe</originalFilename>
+              </versionInfo>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <finalName>${my.productname}</finalName>
+          <appendAssemblyId>false</appendAssemblyId>
+          <archive>
+            <manifest>
+              <mainClass>${my.mainClass}</mainClass>
+            </manifest>
+          </archive>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+      </plugin>
+      <!--<plugin>-->
+        <!--<groupId>org.apache.maven.plugins</groupId>-->
+        <!--<artifactId>maven-jar-plugin</artifactId>-->
+        <!--<version>2.4</version>-->
+        <!--<configuration>-->
+          <!--<archive>-->
+            <!--<index>true</index>-->
+            <!--<manifest>-->
+              <!--<mainClass>SemaphoreAPIExecutor.HttpsClient</mainClass>-->
+            <!--</manifest>-->
+          <!--</archive>-->
+        <!--</configuration>-->
+      <!--</plugin>-->
+      <!--<plugin>-->
+        <!--<groupId>org.apache.maven.plugins</groupId>-->
+        <!--<artifactId>maven-compiler-plugin</artifactId>-->
+        <!--<configuration>-->
+          <!--<source>1.8</source>-->
+          <!--<target>1.8</target>-->
+        <!--</configuration>-->
+      <!--</plugin>-->
+
     </plugins>
 
   </build>
